styles.css
body {
	padding: 0px!important;
	margin:	0px!important;
	
	overflow: scroll;
	
	font-family: arial, "Century Gothic";
	
	color: #333;
}

body > div#board {
	white-space: nowrap; /* To prevent wrapping of inline-block */
	overflow: scroll;
	
	font-size:0px; /* The Hell? */
	padding: 36px 44.75px;
	margin:0px;
}

body > div#board a {
	color: inherit;
	text-decoration: none;
}

body > div#board a:hover {
	color: #FFF;
	text-shadow: 0px 1px 0px black;
}

body > div#board > ul {
	display: inline-block;
	position: relative;
	list-style-type: none;
	padding: 0px;

	margin-left: -8.75px;
	margin-right: -8.75px;
	
	margin-bottom: 123px;
}

body>div#board>ul.offset {
	top: 62px;
}

body>div#board>ul>li {
	width: 142px;
	height: 123px;
	padding: 0;
	
	margin-left: inherit;
	margin-right: inherit;
	margin-bottom: 0px;
	
	font-size: 18px;
	text-align: center;
}

body .blue-player, body .white-player {
	background-color: #666;
	border-radius: 3px;
	padding-left: 2px;
	padding-right: 2px;
}

body .blue-player {
	color: #45c8ff;
}

body .white-player {
	color: #FFFFFF;
}

body>div#board svg {
	width: 100%;
	padding: 0px;
	margin: 0px;
}

body>div#board>ul>li>svg.piece path.inline,
body>div#board>ul>li>svg.piece polyline.outline {
	stroke: #999999;
}

body>div#board>ul>li>svg.piece polyline.playerA {
	fill: #AAA;
}

body>div#board>ul>li>svg.piece g.playerB {
	fill: #AAA;
}

body>div#board:not([disabled])>ul>li:not([disabled]):not([data-played])>svg.piece polyline.playerA {
	fill: #DDD;
}

body>div#board:not([disabled])>ul>li:not([disabled]):not([data-played])>svg.piece g.playerB {
	fill: #DDD;
}

body>div#board>ul>li>div.btn-group {
	display: none;
}

/*body>div#board:not([disabled])>ul>li:not([disabled]):not([data-played])>svg.piece polyline.outline {
	stroke: #F90;
}*/

body>div#board:not([disabled])>ul>li:not([disabled]):hover:not([data-played])>svg.piece path.inline,
body>div#board>ul>li[data-played]>svg.piece path.inline,
body>div#board:not([disabled])>ul>li:hover:not([disabled]):not([data-played])>svg.piece polyline.outline,
body>div#board>ul>li[data-played]>svg.piece polyline.outline {
	stroke: #000000;
}

body>div#board:not([disabled])>ul>li:hover:not([disabled]):not([data-played])>svg.piece polyline.playerA,
body>div#board>ul>li[data-played]>svg.piece polyline.playerA {
	fill: #FFFFFF;
}


body>div#board:not([disabled])>ul>li:hover:not([disabled]):not([data-played])>svg.piece g.playerB,
body>div#board>ul>li[data-played]>svg.piece g.playerB {
	fill: #40B2FF;
}


body>div#board:not([disabled])>ul>li:hover:not([disabled]):not([data-played])>div.btn-group {
	display: block;
}

body>div#board>ul>li>div.btn-group {
	opacity: 0.8;
	margin-top: -38px;
	z-index: 1000;
}

body>div#board>ul>li>div.btn-group button {
	font-size: 12px!important;
}

